@@ -465,6 +465,7 @@
     %ffi-pointer->string
     %ffi-pointer-ref
     %ffi-supported?
+    host-os
     output-port?
     textual-port?
     port?
