@@ -1012,6 +1012,8 @@
     (stat-mtime mosh)
     (file-newer?  mosh)
     (standard-library-path mosh)
+    (library-path mosh) ; for srfi system
+    (host-os mosh) ; for srfi-system
     (format interaction mosh)
     (print mosh)
 ;    (string-join interaction mosh-string)
