@@ -1,5 +1,7 @@
 2009-02-05  higepon  <higepon@users.sourceforge.jp>
 
+        * Added (host-os) and (library-path) to library (mosh).
+
         * lib/srfi/%3A41.ss: Added SRFI-41.
 
         * lib/srfi/%3A38.ss: Added SRFI-39.
